--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
     <script src="app.js"></script>
 </head>
 <body>
-    <h1>
-        Learn JavaScript
-    </h1>
+    <div class="parent">
+        <div class="child"></div>
+    </div>
 </body>
 </html>
